<resources>
    <string name="app_name">HowSmartAreyou?</string>
    <string name="brain_storm">   Brain Storm!</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="previous_button">previous button</string>
    <string name="next_button">next_button</string>
    <string name="count_of_questions">0 out of 100</string>
    <string name="correct_answer">Correct!!</string>
    <string name="wrong_answer">Wrong!!</string>
    <string name="scores">Scores:</string>
</resources>
